feat: Delete Account model and just use repository, implement and initial test for get account by id
