# src/controllers/accounts/index.ts
@@ -1,5 +1,7 @@
 import CreateAccounts from './CreateAccounts';
+import GetAccount from './GetAccount';
 
 export default {
-  CreateAccounts
+  CreateAccounts,
+  GetAccount
 };
