# src/routers/Accounts.ts
@@ -11,7 +11,7 @@ const router: Router = Router();
 const logger = createLogger({ name: 'asdf' });
 
 router.post<Record<never, never>,
-  components['schemas']['AccountResponse'],
+  components['schemas']['CreateAccountResponse'],
   components['schemas']['AccountRequest'],
   Record<never, never>,
   Record<never, never>>('/', async (req, res, next) => {
@@ -21,6 +21,21 @@ router.post<Record<never, never>,
       const { account, user } = await controller.exec(logger);
       return res.status(201)
         .json({ id: account.id, name: account.name, description: account.description, email: user.email });
+    } catch (err) {
+      logger.error({ error: serializeError(err) }, 'Failed');
+      return next(err);
+    }
+  });
+
+router.get<{ id: string },
+  components['schemas']['AccountResponse'],
+  Record<never, never>,
+  Record<never, never>,
+  Record<never, never>>('/:id', async (req, res, next) => {
+    try {
+      const controller = new controllers.GetAccount(req.params.id);
+      const account = await controller.exec(logger);
+      return res.status(200).json(account);
     } catch (err) {
       logger.error({ error: serializeError(err) }, 'Failed');
       return next(err);
